Story_9 - Added CI/CD YAML file
Added the link and initial YAML file.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "project_shein",
   "version": "0.1.0",
+  "homepage": "https://smritisharma-33.github.io/project_shein",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/user-event": "^13.5.0",
