--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,3 +52,28 @@ jobs:
                 name: build-output
                 path: build/
                 retention-days: 7
+    
+    deploy:
+        name: Deploy
+        needs: validate-and-build
+        runs-on: ubuntu-latest
+        
+        steps:
+        - name: Checkout repository
+          uses: actions/checkout@v3
+          with:
+            fetch-depth: 0
+
+        - name: Download build artifacts
+          uses: actions/download-artifact@v4
+          with:
+            name: build-output
+            path: build
+        
+        - name: Deploy to GitHub Pages
+          uses: JamesIves/github-pages-deploy-action@v4
+          with:
+            folder: build
+            branch: gh-pages
+            clean: true
+            commit-message: "Deploy: ${{ github.event.head_commit.message }}"
