--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,3 +77,7 @@ jobs:
             branch: gh-pages
             clean: true
             commit-message: "Deploy: ${{ github.event.head_commit.message }}"
+
+        - name: Post-deployment notification
+          run: |
+            echo "Deployment complete! Your site is available at: https://${{ github.repository_owner }}.github.io/project_shein/"
